@@ -1,3 +1,9 @@
+Fri Apr 28 07:52:45 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>
+
+	* login.c: Lots of lint cleanup; declare functions before they
+		are used, add appropriate return types (int or void)
+		to functions as necessary, etc.
+	
 Thu Apr 27 21:44:17 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)
 
 	* login.c: Remove definition of krb_err_txt. krb.h defines it.
